@@ -2,6 +2,8 @@
 
         * nsd/urlopen.c: fixed bug #844809.
 
+        * sample-config.tcl: fixed bug #805761.
+
 2003-12-24  Scott S. Goodwin <scott@scottg.net>
 
 	* include/nsthread.h: Bumped up NS_THREAD_NAMESIZE from 32 to 64.
